trunk/Archive2/7e/cd3fbc837d407d/output
main.cpp:28:56: error: no matching function for call to 'to_string'
            raw_string = raw_string.substr(0, found) + std::to_string(arg_head) + raw_string.substr(found + 1, raw_string.size());
                                                       ^~~~~~~~~~~~~~
main.cpp:41:18: note: in instantiation of function template specialization 'Interpolate<std::basic_string<char>>' requested here
    std::cout << Interpolate(R"(goo %)", str1) << std::endl;
                 ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2864:3: note: candidate function not viable: no known conversion from 'std::basic_string<char>' to 'int' for 1st argument
  to_string(int __val)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2869:3: note: candidate function not viable: no known conversion from 'std::basic_string<char>' to 'unsigned int' for 1st argument
  to_string(unsigned __val)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2875:3: note: candidate function not viable: no known conversion from 'std::basic_string<char>' to 'long' for 1st argument
  to_string(long __val)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2880:3: note: candidate function not viable: no known conversion from 'std::basic_string<char>' to 'unsigned long' for 1st argument
  to_string(unsigned long __val)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2886:3: note: candidate function not viable: no known conversion from 'std::basic_string<char>' to 'long long' for 1st argument
  to_string(long long __val)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2892:3: note: candidate function not viable: no known conversion from 'std::basic_string<char>' to 'unsigned long long' for 1st argument
  to_string(unsigned long long __val)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2898:3: note: candidate function not viable: no known conversion from 'std::basic_string<char>' to 'float' for 1st argument
  to_string(float __val)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2907:3: note: candidate function not viable: no known conversion from 'std::basic_string<char>' to 'double' for 1st argument
  to_string(double __val)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2916:3: note: candidate function not viable: no known conversion from 'std::basic_string<char>' to 'long double' for 1st argument
  to_string(long double __val)
  ^
1 error generated.
